--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <img src="./images/confarence.png" class="d-block w-100 img-fluid " alt="image2">
                     <div class="carousel-caption d-none d-md-block  bg-gradient p-5 mb-5">
 
-                        <h5 class="fs-1">The perfect venue for your next event</h5>
+                        <h5 class="fs-1">Our All Events Category Here</h5>
 
                         <p>Here you can find all kinds of resources for exhibitions, trade shows, conferences,
                             conventions, weddings, parties and more. This blog specialises in innovation and EventProfs
@@ -109,12 +109,12 @@
                 <div class="carousel-item ">
                     <img src="./images/party2.png" class="d-block w-100 " alt="image3">
                     <div class="carousel-caption d-none d-md-block  bg-gradient p-5 p-5 mb-5">
-                        <h5 class="fs-1">The perfect venue for your next event</h5>
+                        <h5 class="fs-1">Sensory room now available at the Dream Convention Center</h5>
 
-                        <p>The leader in event technology trends, this is an excellent resource for seasoned event
-                            planners. There are resources for wedding planning, event management and party planning, but
-                            this blog specialises in innovation, and many event planners refer to it. They also focus a
-                            lot on the event industry’s news.</p>
+                        <p>A fully-equipped sensory room is now available at the Overland Park Convention Center for
+                            neurodiverse, autistic and disabled individuals. In partnership with non-profit KultureCity,
+                            the sensory room is a dedicated space created by medical professionals with reduced lighting
+                            and noise for guests who may feel overstimulated and need a more secure environment.</p>
 
                         <button class="btn btn-warning mb-5"> <a class="text-decoration-none text-white fw-bold"
                                 target="_blank" href="#">Book Now</a></button>
@@ -152,7 +152,8 @@
                     gardens and extensive outdoor sports facilities offer so much more than your usual community venue,
                     providing something quite unique for the local community and surrounding areas to enjoy.</p>
                 <div>
-                    <a class="btn btn-primary" target="_blank" href="#" role="button">Explore our Album</a>
+                    <a class="btn btn-warning fw-bold text-white" target="_blank" href="#" role="button">Explore our
+                        Album</a>
                 </div>
             </div>
 
@@ -165,7 +166,8 @@
 
         <div class="toast show align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
-                <div class="toast-body fw-bold"> <i class="fas fa-bell text-danger p-2"></i> Hello, Dear! Subscribe Our Dream Convention Center.</div>
+                <div class="toast-body fw-bold"> <i class="fas fa-bell text-danger p-2"></i> Hello, Dear! Subscribe Our
+                    Dream Convention Center.</div>
                 <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
         </div>
@@ -181,9 +183,9 @@
 
         <div class="package ">
 
-            <div class="row row-cols-1 row-cols-md-3 row-cols-sm-2 row-cols-lg-4 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-4 g-4">
 
-                <div class="col">
+                <div class="col pb-3">
                     <div class="h-80">
                         <div class="card-body">
                             <h5 class="card-title h1">$300</h5>
@@ -198,18 +200,18 @@
                             <p> <i class="far fa-check-circle pe-2"></i>Per day bill </p>
 
 
-                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
                 </div>
 
 
-                <div class="col">
+                <div class="col pb-3">
                     <div class="h-80">
                         <div class="card-body">
                             <h5 class="card-title h1">$500</h5>
-                            <h6 class="card-subtitle mb-2 text-muted h3">wedding basic</h6>
+                            <h6 class="card-subtitle mb-2 text-muted h3">Wedding Basic</h6>
                             <p class="card-text">For weddings with basic plan
                                 and limited item</p>
 
@@ -220,14 +222,14 @@
                             <p> <i class="far fa-check-circle pe-2"></i>Billed as shift </p>
 
 
-                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
                 </div>
 
 
-                <div class="col">
+                <div class="col pb-3">
                     <div class="card h-80  shadow-lg p-3 mb-5 bg-body rounded ">
                         <div class="card-body  ">
 
@@ -247,14 +249,14 @@
                             <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
 
 
-                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
                 </div>
 
 
-                <div class="col">
+                <div class="col pb-3">
                     <div class="h-80 ">
                         <div class="card-body">
                             <h5 class="card-title h1">$1200</h5>
@@ -269,7 +271,7 @@
                             <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
 
 
-                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
@@ -287,6 +289,7 @@
     <!-- special section start here -->
 
     <section class="row row-cols-lg-2 container-fluid d-flex justify-content-around ">
+
         <div class="left col-lg-5 bg-light p-5  align-items-center mb-4 rounded-3">
             <h1 class="pt-5">Let's Get Planning</h1>
             <p>We'd love to hear your event. Fill out our Event Enquiries form and let's bring your vision to reality.
@@ -319,18 +322,15 @@
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Accordion Item #1
+                                <h5>Features of Company </h5>
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                Convention centers typically have at least one auditorium and may also contain concert
+                                halls, lecture halls, meeting rooms, and conference rooms. Some large resort area hotels
+                                include a convention center.
                             </div>
                         </div>
                     </div>
@@ -338,18 +338,16 @@
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Accordion Item #2
+                                <h6>How To Book Dream Convention Center</h6>
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                until the collapse plugin adds the appropriate classes that we use to style each
-                                element. These classes control the overall appearance, as well as the showing and hiding
-                                via CSS transitions. You can modify any of this with custom CSS or overriding our
-                                default variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                We are all looking forward to serving you! You can also find extensive information about
+                                our Center on our main website. You can also download the Hawai`i Convention Center’s
+                                Event Planner’s Handbook from our main website for useful information to begin planning
+                                your event.
                             </div>
                         </div>
                     </div>
@@ -357,18 +355,15 @@
                         <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Accordion Item #3
+                                <h6>Rules of this convention center</h6>
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                Convention centers typically have at least one auditorium and may also contain concert
+                                halls, lecture halls, meeting rooms, and conference rooms. Some large resort area hotels
+                                include a convention center.
                             </div>
                         </div>
                     </div>
@@ -388,17 +383,20 @@
 
     <!-- footer section start here -->
 
-    <footer class="d-flex justify-content-between align-items-center ps-5 pe-5 bg-dark col-12 flex-sm-column  flex-lg-row">
+    <footer
+        class="d-flex justify-content-between align-items-center ps-5 pe-5 bg-dark col-12 flex-sm-column  flex-lg-row ">
         <p class="text-white ">© 2022 dream convention center. All rights reserved</p>
 
         <div class=" right d-flex flex-column justify-content-center">
             <h4 class="text-white mt-3">Get the App</h4>
 
-            <a target="_blank" href="#"><img src="./images/apple-removebg-preview.png" alt="apple"class="apple"></a>
+            <a target="_blank" href="https://developer.apple.com/app-store/guidelines/"><img
+                    src="./images/apple-removebg-preview.png" alt="apple" class="apple"></a>
 
-         <a target="_blank" href="#"><img src="./images/google_play-removebg-preview.png" alt="google " class=" google"></a>
+            <a target="_blank" href="https://play.google.com/store/apps"><img
+                    src="./images/google_play-removebg-preview.png" alt="google " class=" google"></a>
         </div>
-        
+
 
     </footer>
 
